完成注解引用分析